tests/compile-fail/fn_return_type.stderr
error: Invalid plugin function signature

         = help: Function should take a single argument of the type `&mut bevy::app::App`

 --> tests/compile-fail/fn_return_type.rs:6:1
  |
6 | fn has_return_type(_: &mut App) -> usize { 0 }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `bevy::prelude::*`
 --> tests/compile-fail/fn_return_type.rs:3:5
  |
3 | use bevy::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
